--- a/coaches/templates/coaches/detail.html
+++ b/coaches/templates/coaches/detail.html
@@ -1,28 +1,12 @@
-<html>
-  <head>
-    {% load staticfiles %}
-    <link rel="stylesheet" type="text/css" href="{% static "/css/bootstrap.min.css" %}">
-    <title>Course main page</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li><a href={% url 'index' %}>Main</a></li>
-              <li><a href={% url 'students:students' %}>Students</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </nav>
+{% extends "base.html" %}
+
+{% load staticfiles %}
+
+{% block title %}<title>Coach details</title>{% endblock title%}
+
+{% block nav-class-index %}active{% endblock nav-class-index %}
+
+{% block content %}
        <div class="col-md-6">
           <p>{{student.full_name}}</p>
           <table class="table table-striped">
@@ -66,8 +50,4 @@
             </tbody>
           </table>
         </div>
-      </div>
-
-  </body>
-
-</html>
+{% endblock content %}
