--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,43 +1,15 @@
+{% extends "base.html" %}
+
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Contacts</title>
 
-    <!-- Bootstrap -->
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-		<link href="{% static 'css/style.css' %}" rel="stylesheet">
+{% block title %}Contacts{% endblock title %}
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-		<nav class="navbar navbar-default navbar-static-top">
-			<div class="container">
-				<ul class="nav navbar-nav">
-					<li><a href="{% url 'index' %}">Main</a></li>
-					<li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
-					<li><a href="{% url 'student_list' %}">Students</a></li>
-					<li><a href="{% url 'results' %}">Quadratic</a></li>
-				</ul>
-			</div>
-		</nav>
+{% block nav_active_contact %}active{% endblock %}
+{% block content %}
 		<div class ='container'>
 			<div class='jumbotron'>
 				<h2 class='text-uppercase'>Contacts</h2>
 			</div>
-			<div class="alert alert-success" role="alert">
-				<p class="alert-success">You can contact us!</p>
-			</div>
-			<p class="button"><button type="button" class="btn btn-lg btn-default" data-toggle="popover" title="Email" data-content="And here's some amazing content. It's very engaging. Right?">Click to write an email</button></p>
 			<div class='proffesion'>
 				<hr>
 				<h2 class='possition'>Director</h2>
@@ -69,15 +41,5 @@
 					<p class='name'>Phone: (050) 285 34 17</p></td>
 				</table>
 			</div>
-			<p><span class="label label-info">Info</span>More information here</p>
 		</div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{% static 'js/bootstrap.js' %}"></script>
-  </body>
-</html>
-
-
-
-
+{% endblock content %}
