--- a/templates/index.html
+++ b/templates/index.html
@@ -1,54 +1,33 @@
+{% extends "base.html" %}
+
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Main</title>
 
-    <!-- Bootstrap -->
-    <link href="{% static "css/bootstrap.css"%}" rel="stylesheet">
-	<link href="{% static "css/style.css"%}" rel="stylesheet">
+{% block title %}Main{% endblock title %}
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-		<nav class="navbar navbar-default navbar-static-top">
-	  		<div class="container">
-				<ul class="nav navbar-nav">
-			        <li class="active"><a href="{% url 'index' %}">Main</a></li>
-			        <li><a href="{% url 'contact' %}">Contacts</a></li>
-			        <li><a href="{% url 'students:list_view' %}">Students</a></li>
-			        <li><a href="{% url 'results' %}">Quadratic</a></li>
-				</ul>
-	  		</div>
-		</nav>
+{% block nav_active_main %}active{% endblock %}
+
+{% block content %}
 		<div class ='container'>
 			<h2 class='possition'>ItBursa</h2>
 			<div class='jumbotron'>
 				<p class='text'>PyBursa courses can be easy to pick up whether you're a first time programmer or you're experienced with other languages.</p>
 				<p class='text2'>The online conferences and meetups, collaborates on code, and much more. Online videos will help you along the way, and the mailing lists will keep you in touch.</p>
 			</div>
+			<div>
+				{% include 'inc_coach.html' with coaches=coaches %}
+
+			</div>
 			<h2 class='possition'>Our courses</h2>
 			<div class='grey'>
 				<table class='table'>
 					<tr class='title_table'><th>Lesson</th><th>Theme</th>
 					{% for course in courses %}
-						<tr><td><a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a></td><td>{{ course.short_description }}</tr>
+						<tr>
+							<td><a href="{% url 'courses:detail' course.id %}">{{ course.name|upper }}</a></td>
+							<td>{{ course.short_description|title }}</td>
+						</tr>
 					{% endfor %}
 				</table>
 			</div>
 		</div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{% static 'js/bootstrap.js' %}"></script>
-  </body>
-</html>
+{% endblock content %}
