--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -1,33 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-		<title>Student</title>
+{% extends "base.html" %}
 
-    <!-- Bootstrap -->
-		<link href="../static/css/bootstrap.css" rel="stylesheet">
-		<link href="../static/css/style.css" rel="stylesheet">
+{% load staticfiles %}
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-	</head>
-	<body>
-		<nav class="navbar navbar-default navbar-static-top">
-	  		<div class="container">
-				<ul class="nav navbar-nav">
-			        <li><a href="index.html">Main</a></li>
-			        <li><a href="contact.html">Contacts</a></li>
-			        <li class="active"><a href="student_list.html">Students</a></li>
-				</ul>
-	  		</div>
-		</nav>
+{% block title %}Student Detail{% endblock title %}
+
+{% block content %}
 		<div class ='container'>
 			<div class="page-header">
 				<h2 class="course">Petrov Vladimir</h2>
@@ -110,9 +87,4 @@
 				</table>
 			<p class='glyphicon-ok'>To get more ditails please connect with us</p>
 		</div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/js/bootstrap.js"></script>
-  </body>
-</html>
+{% endblock content %}
