--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -1,34 +1,10 @@
+{% extends "base.html" %}
+
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-		<title>Students</title>
 
-    <!-- Bootstrap -->
-		<link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-		<link href="{% static 'css/style.css' %}" rel="stylesheet">
+{% block title %}Student Detail{% endblock title %}
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-	</head>
-	<body>
-		<nav class="navbar navbar-default navbar-static-top">
-	  		<div class="container">
-				<ul class="nav navbar-nav">
-			        <li><a href="{% url 'index' %}">Main</a></li>
-			        <li><a href="{% url 'contact' %}">Contacts</a></li>
-			        <li class="active"><a href="{% url 'student_list' %}">Students</a></li>
-				</ul>
-	  		</div>
-		</nav>
+{% block content %}
 		<div class ='container'>
 			<h2 class="course">Преподователи курса</h2>
 			<div class="row placeholders">
@@ -129,9 +105,4 @@
 			</div>
 			<p class="silka">Что бы записаться на курсы <span id='bursa'>PyBursa</span> пройдите по указанной ссылке</p>
 		</div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{% static 'js/bootstrap.js' %}"></script>
-  </body>
-</html>
+{% endblock content %}
