--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -1,40 +1,17 @@
+{% extends "base.html" %}
+
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Main</title>
 
-    <!-- Bootstrap -->
-    <link href="{% static "css/bootstrap.css"%}" rel="stylesheet">
-	<link href="{% static "css/style.css"%}" rel="stylesheet">
+{% block title %}Student Detail{% endblock title %}
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-		<nav class="navbar navbar-default navbar-static-top">
-	  		<div class="container">
-				<ul class="nav navbar-nav">
-			        <li class="active"><a href="{% url 'index' %}">Main</a></li>
-			        <li><a href="{% url 'contact' %}">Contacts</a></li>
-			        <li><a href="{% url 'students:list_view' %}">Students</a></li>
-			        <li><a href="{% url 'results' %}">Quadratic</a></li>
-				</ul>
-	  		</div>
-		</nav>
-		<div class ='container'>
+{% block content %}
+	{% block students %}
 			<h2 class='possition'>PyBursa</h2>
 			<div class='jumbotron'>
 				<h2>{{ student.name }} {{ student.surname }}</h2>
 			</div>
+	{% endblock students %}
+	{% block table %}
 			<div class='grey'>
 				<table class='table'>
 					<tr><th>Date of birth</th><th>{{ student.date_of_birth }}</th>
@@ -49,10 +26,5 @@
 					</th>
 				</table>
 			</div>
-		</div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{% static 'js/bootstrap.js' %}"></script>
-  </body>
-</html>
+	{% endblock table %}
+{% endblock content %}
