--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 		<div class ='container'>
-			<h2 class='possition' align="center">ItBursa</h2>
+			<h2 class='possition' align="center">ItBursa!</h2>
 			<div class='jumbotron'>
 				<h2>{{ course.name }}</h2>
 				<h3>{{ course.description|truncatechars:35 }}</h3>
