--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -1,55 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="">
-    <title>Results</title>
-    {% load staticfiles %}
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <link href="{% static 'css/carousel.css' %}" rel="stylesheet">
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
-    <script type="text/javascript" src="../static/js/mine.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-  </head>
-  <body>
-    <div class="navbar-wrapper">
-      <div class="container">
-        <nav class="navbar navbar-inverse navbar-static-top">
-          <div class="container">
-            <div id="navbar" class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
-                <li><a href="{% url 'index' %}">Main</a></li>
-                <li><a href="{% url 'contact' %}">Contacts</a></li>
-                <li><a href="{% url 'student_list' %}">Students</a><li>
-                <li class="active"><a href="{% url 'results' %}">Results</a><li>
-              </ul>
-            </div>
+{% extends "base.html" %}
+
+
+{% load static from staticfiles %}
+
+
+{% block title %}Results{% endblock %}
+
+
+{% block active_index %}active{% endblock %}
+
+
+{% block main %}
+
+<div class="container">
+      <p class="lead">Quadratic equation</p>
+      <form method="post" class="form-horizontal">
+        <div class="form-group">
+          {% csrf_token %}
+          <div class="col-sm-10">
+            {{ form.as_p }}
           </div>
-        </nav>
-      </div>
+          <div class="col-sm-10"><input type="submit" /></div>
+        </div>
+      </form>
+
+    {% if not error %}
+    <ul>
+      <li>a = {{ a }} </li>
+      <li>b = {{ b }} </li>
+      <li>a = {{ c }} </li>
+    </ul>
+
+    Discriminant: {{ d }}
+    {{ result_message }}
+    {% endif %}
     </div>
 
-  <div class="container">
-       <h2>Results</h2>
-       <h3>a*x*x + b*x + c = 0</h3>
-       <ul>
-        <li>
-          a = {{a}} </br> {{err1}}
-        </li>
-        <li>
-          b = {{b}} </br> {{err2}}
-        </li>
-        <li>
-          c = {{c}} </br> {{err3}}
-        </li>
-        <h3>{{d}}</h3>
-        <h3>{{x}}<h3>
-       </ul>
-   </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
-</html>
+{% endblock main %}
