--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -1,45 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="">
-    <title>PyBursa Project</title>
-    {% load staticfiles %}
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-	  <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <link href="{% static 'css/carousel.css' %}" rel="stylesheet">
-    <script src="{% static 'assets/js/ie-emulation-modes-warning.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/mine.js' %}"></script>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-    
-  </head>
-<!-- NAVBAR
-================================================== -->
-  <body>
-  <div>
-  <div>
-    <div class="navbar-wrapper">
-      <div class="container">
-        <nav class="navbar navbar-inverse navbar-static-top">
-          <div class="container">
-            <div id="navbar" class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
-                <li class="active"><a href="{% url 'index' %}">Main</a><li>
-                <li><a href="{% url 'contact' %}">Contacts</a><li>
-                <li><a href="{% url 'students:list_view' %}?course_id={{ course.id }}">Students</a><li>
-              </ul>
-          </div>
-        </nav>
-      </div>
-    </div>
-<div>
+{% extends "base.html" %}
+
+
+{% load static from staticfiles %}
+
+
+{% block title %}Coach{% endblock %}
+
+
+{% block active_index %}active{% endblock %}
+
+
+{% block main %}
 
 <div class="container">
    <div class="container">
-          <h2>{{ course.name }} course details</h2>
-            <h3>{{ course.description }}</h3>
+          <h2>{{ course.name|upper }} course details</h2>
+            <h3>{{ course.description|truncatechars:32 }}</h3>
               <br>
                 <h3>Coach</h3>
                  <table class="table">
@@ -82,7 +58,4 @@
             </br>
       </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
-</html>
+{% endblock main %}
