--- a/templates/index.html
+++ b/templates/index.html
@@ -1,69 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="">
-    <title>PyBursa Project</title>
-    {% load staticfiles %}
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-	  <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <link href="{% static 'css/carousel.css' %}" rel="stylesheet">
-    <script src="{% static 'assets/js/ie-emulation-modes-warning.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/mine.js' %}"></script>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-    
-  </head>
-<!-- NAVBAR
-================================================== -->
-  <body>
-  <div>
-  <div>
-    <div class="navbar-wrapper">
-      <div class="container">
-        <nav class="navbar navbar-inverse navbar-static-top">
-          <div class="container">
-            <div id="navbar" class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
-                <li class="active"><a href="{% url 'index' %}">Main</a><li>
-                <li><a href="{% url 'contact' %}">Contacts</a><li>
-                <li><a href="{% url 'students:list_view' %}">Students</a><li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </div>
-    </div>
-<div>
+{% extends "base.html" %}
+
+
+{% load static from staticfiles %}
+
+
+{% block title %}PyBursa Project{% endblock %}
+
+
+{% block active_index %}active{% endblock %}
+
+
+{% block main %}
+
   <div class="container"></br></br></br></br></br>
-    <div class="jumbotron">
-          <h1>PyBursa</h1>
-          <h3>Organization description:</h3>
-          <p>Научись или умри. Мы построили курсы с акцентом на практику</p>
-        </div>
-      <div class="container">
-        <h3>Courses Program</h3>
-        <br>
-          <table class="table">
-            <thead>
-              <tr>
-                <th>Course</th>
-                <th>Description</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for course in courses %}
-                <tr>
-                  <td><a href="{% url 'courses:detail' course.id %}">{{ course }}</a></td>
-                  <td>{{ course.short_description }}</td>
-                </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-        </br>
-    </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
-</html>
+
+{% include "inc_index.html" only%}
+
+  <div class="container">
+    <h3>Courses Program</h3>
+    <br>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Course</th>
+            <th>Description</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for course in courses %}
+            <tr>
+              <td><a href="{% url 'courses:detail' course.id %}">{{ course|upper }}</a></td>
+              <td>{{ course.short_description|title }}</td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </br>
+  </div>
+{% endblock main %}
