--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -1,39 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="">
-    <title>Student list</title>
-    {% load staticfiles %}
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <link href="{% static 'css/carousel.css' %}" rel="stylesheet">
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
-    <script type="text/javascript" src="../static/js/mine.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-  </head>
-<!-- NAVBAR
-================================================== -->
-  <body>
-    <div class="navbar-wrapper">
-      <div class="container">
-        <nav class="navbar navbar-inverse navbar-static-top">
-          <div class="container">
-            <div id="navbar" class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
-                <li><a href="{% url 'courses:index' %}">Main</a><li>
-                <li><a href="{% url 'contact' %}">Contacts</a><li>
-                <li class="active"><a href="{% url 'student_list' %}">Students</a><li>
-                <li><a href="{% url 'results' %}">Results</a><li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </div>
-  </div>
-    <div class="container marketing"></br></br></br></br></br>
+{% extends "base.html" %}
+
+
+{% load static from staticfiles %}
+
+
+{% block title %}Student list{% endblock %}
+
+
+{% block active_students %}active{% endblock %}
+
+
+{% block main %}
+
+
+  <div class="container marketing"></br></br></br></br></br>
   <h2>Курс PyBursa</h2>
   <p>Ниже представлен список студентов курса PyBursa</p>            
   <table class="table table-bordered">
@@ -85,7 +65,4 @@
     </tbody>
   </table>
 </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
-</html>
+{% endblock main %}
