--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -1,77 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="">
-    <title>PyBursa Project</title>
-    {% load staticfiles %}
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-	  <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <link href="{% static 'css/carousel.css' %}" rel="stylesheet">
-    <script src="{% static 'assets/js/ie-emulation-modes-warning.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/mine.js' %}"></script>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-    
-  </head>
+{% extends "base.html" %}
 
-  <body>
-  <div>
-  <div>
-    <div class="navbar-wrapper">
-      <div class="container">
-        <nav class="navbar navbar-inverse navbar-static-top">
-          <div class="container">
-            <div id="navbar" class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
-                <li><a href="{% url 'index' %}">Main</a><li>
-                <li><a href="{% url 'contact' %}">Contacts</a><li>
-                <li class="active"><a href="{% url 'students:list_view' %}">Students</a><li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </div>
-    </div>
+
+{% load static from staticfiles %}
+
+
+{% block title %}Students list{% endblock %}
+
+
+{% block active_students %}active{% endblock %}
+
+
+{% block main %}
+
 <div>
     <div class="container">
       <h1>Student details</h1>
         <div class="container">
-              <h2>{{ student.name }} {{ student.surname }}</h2>
-              <br>
-              <table class="table">
-                <tr>
-                  <td>Birth day</td>
-                  <td>{{ student.date_of_birth }}</td>
-                </tr>
-                <tr>
-                  <td>Address</td>
-                  <td>{{ student.address }}</td>
-                </tr>
-                <tr>
-                  <td>Email</td>
-                  <td>{{ student.email }}</td>
-                </tr>
-                <tr>
-                  <td>Skype</td>
-                  <td>{{ student.skype }}</td>
-                </tr>
-                <tr>
-                  <td>Phone</td>
-                  <td>{{ student.phone }}</td>
-                </tr>
-                <tr>
-                  <td>Courses</td>
-                  <td>{% for course in student.courses.all %}
-                          <a class="out-link" href="{% url 'courses:detail' course.id %}"> {{ course }}</a>
-                      {% endfor %}</td>
-                  </tr>
-                </tr>
-              </table>
-            </br>
+          <h2>{{ student.name }} {{ student.surname }}</h2>
+          <br>
+          <table class="table">
+            <tr>
+              <td>Birth day</td>
+              <td>{{ student.date_of_birth }}</td>
+            </tr>
+            <tr>
+              <td>Address</td>
+              <td>{{ student.address }}</td>
+            </tr>
+            <tr>
+              <td>Email</td>
+              <td>{{ student.email }}</td>
+            </tr>
+            <tr>
+              <td>Skype</td>
+              <td>{{ student.skype }}</td>
+            </tr>
+            <tr>
+              <td>Phone</td>
+              <td>{{ student.phone }}</td>
+            </tr>
+            <tr>
+              <td>Courses</td>
+              <td>{% for course in student.courses.all %}
+                      <a class="out-link" href="{% url 'courses:detail' course.id %}"> {{ course }}</a>
+                  {% endfor %}</td>
+              </tr>
+            </tr>
+          </table>
+        </br>
       </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
-</html>
+{% endblock main %}
