--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 				<p class='text2'>The online conferences and meetups, collaborates on code, and much more. Online videos will help you along the way, and the mailing lists will keep you in touch.</p>
 			</div>
 			<div>
-				{% include 'inc_coach.html' with coaches=coaches %}
+				{% include 'include/inc_coach.html' with coaches=coaches %}
 
 			</div>
 			<h2 class='possition'>Our courses</h2>
