--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,3 +46,26 @@ p {
 .founder{
   font-family: monospace;
 }
+.errorlist{
+  color: #fdfdfd;
+  text-align: left;
+}
+.self_messages{
+  color: #fdfdfd;
+  font-size: 24px;
+  font-family: Arial;
+  text-align: left;
+}
+
+.alert {
+padding: 8px 35px 8px 14px;
+margin-bottom: 18px;
+color: #232323;
+text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+text-align: left;
+background-color: #dcdcdc;
+border: 1px solid #fbeed5;
+-webkit-border-radius: 4px;
+-moz-border-radius: 4px;
+border-radius: 4px;
+}
