--- a/templates/students/add.html
+++ b/templates/students/add.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 
-{% block title %}Students List{% endblock %}
+{% block title %}Adding new student{% endblock %}
 
 
 {% block nav_students %}active{% endblock %}
@@ -9,19 +9,17 @@
 
 {% block content %}
     <div class="container">
+
       <div class="starter-template">
-          {% if messages %}
-          <div class="alert alert-success">
-            {% for message in messages %}
-              <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-              <strong{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</strong>
-            {% endfor %}
-          </div>
-          {% endif %}
         <div class="container">
-        <a href="{% url 'students:add' %}" class="btn btn-primary" role="button">Add new student</a>
-        <h2>Students list</h2>
-              <table class="table">
+        <h2>Adding new student</h2>
+        
+          <form method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="Submit" />
+       </form>
+<!--               <table class="table">
                 <thead>
                   <tr>
                     <th>Name\Surname</th>
@@ -46,7 +44,7 @@
                           <h3>No students</h3>
                     {% endfor %}
                 </tbody>
-              </table>
+              </table> -->
       </div>
     </div><!-- /.container -->
 {% endblock content %}
