--- a/templates/base.html
+++ b/templates/base.html
@@ -21,16 +21,16 @@
           <div class="container">
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="{% block active_index %}{% endblock %}"><a href="{% url 'index' %}">Main</a><li>
-                <li class="{% block active_contacts %}{% endblock %}"><a href="{% url 'contact' %}">Contacts</a><li>
-                <li class="{% block active_students %}{% endblock %}"><a href="{% url 'students:list_view' %}">Students</a><li>
+                <li class="{% block nav_main %}{% endblock %}"><a href="{% url 'index' %}">Main</a><li>
+                <li class="{% block nav_contacts %}{% endblock %}"><a href="{% url 'contact' %}">Contacts</a><li>
+                <li class="{% block nav_students %}{% endblock %}"><a href="{% url 'students:list_view' %}">Students</a><li>
               </ul>
             </div>
           </div>
         </nav>
       </div>
     </div>
-{% block main %}{% endblock main %}
+{% block content %}{% endblock %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
