--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -1,16 +1,15 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 
 
-{% load static from staticfiles %}
+{% block title %}Coach detail!{% endblock %}
 
 
-{% block title %}Coach{% endblock %}
+{% block nav_main %}active{% endblock %}
 
 
-{% block active_index %}active{% endblock %}
+{% block content %}
 
-
-{% block main %}
 <div>
     <div class="container">
             <div class="starter-template">
@@ -64,4 +63,4 @@
               </br>
       </div>
     </div>
-{% endblock main %}
+{% endblock content %}
