--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 
 
-{% load static from staticfiles %}
+{% load staticfiles %}
 
 
-{% block title %}Coach{% endblock %}
+{% block title %}Course detail{% endblock %}
 
 
-{% block active_index %}active{% endblock %}
+{% block nav_main %}active{% endblock %}
 
 
-{% block main %}
+{% block content %}
 
 <div class="container">
    <div class="container">
@@ -58,4 +58,4 @@
             </br>
       </div>
     </div>
-{% endblock main %}
+{% endblock content %}
