--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,7 @@
 {% block nav_main %}active{% endblock %}
 
 
-{% block content %}
-    <div class="container">
-
+{% block content %}<div class="container">
       <div class="starter-template">
         <div class="container">
           <h2>PyBursa</h2>
@@ -42,5 +40,4 @@
           </table>
         </br>
       </div>
-    </div><!-- /.container -->
-{% endblock content %}
+    </div>{% endblock content %}
