--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,9 +10,7 @@
 {% block nav_contacts %}active{% endblock %}
 
 
-{% block content %}
-    <div class="container">
-
+{% block content %}<div class="container">
       <div class="starter-template">
         <div class="container">
           <h1>PyBursa courses</h1>>
@@ -48,5 +46,4 @@
              </div>
         </div>
       </div>
-    </div><!-- /.container -->
-{% endblock content %}
+    </div>{% endblock content %}
