--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -10,12 +10,8 @@
 {% block nav_main %}active{% endblock %}
 
 
-{% block content %}
-
-    {% include "courses/include/course_include.html" %}
-
-    <div class="container">
-
+{% block content %}<div class="container">
+      {% include "courses/include/course_include.html" %}
       <div class="starter-template">
         <div class="container">
               <h2>{{ course.name }} course details</h2>
@@ -62,5 +58,4 @@
               </br>
 
       </div>
-    </div><!-- /.container -->
-{% endblock content %}
+    </div>{% endblock content %}
