modified html files

--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -17,11 +17,11 @@
 	</div>
 	<h2>Преподаватели</h2>
 	<div class="panel panel-success">
-{% include "courses/include/inc_instructor.html" with block_title="Учитель" instructor=courses.coach %}
+{% include "include/inc_instructor.html" with block_title="Учитель" instructor=courses.coach %}
 </div>
 
 <div class="panel panel-success">
-{% include "courses/include/inc_instructor.html" with block_title="Ассистент" instructor=courses.assistant %}
+{% include "include/inc_instructor.html" with block_title="Ассистент" instructor=courses.assistant %}
 </div>
     <h2>План курса</h2>
     <table class="table table-hover">
