--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -7,12 +7,10 @@
 {% block title %}Course detail{% endblock %}
 
 
-{% block nav_main %}active{% endblock %}
+{% block navigation_main %}active{% endblock %}
 
 
-{% block content %}
-
-<div class="container">
+{% block content %}<div class="container">
    <div class="container">
           <h2>{{ course.name|upper }} course details</h2>
             <h3>{{ course.description|truncatechars:32 }}</h3>
@@ -57,5 +55,4 @@
               </table>
             </br>
       </div>
-    </div>
-{% endblock content %}
+    </div>{% endblock content %}
