--- a/templates/base.html
+++ b/templates/base.html
@@ -21,9 +21,9 @@
           <div class="container">
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="{% block nav_main %}{% endblock %}"><a href="{% url 'index' %}">Main</a><li>
-                <li class="{% block nav_contacts %}{% endblock %}"><a href="{% url 'contact' %}">Contacts</a><li>
-                <li class="{% block nav_students %}{% endblock %}"><a href="{% url 'students:list_view' %}">Students</a><li>
+                <li class="{% block navigation_main %}{% endblock %}"><a href="{% url 'index' %}">Main</a><li>
+                <li class="{% block navigation_main_contacts %}{% endblock %}"><a href="{% url 'contact' %}">Contacts</a><li>
+                <li class="{% block navigation_main_students %}{% endblock %}"><a href="{% url 'students:list_view' %}">Students</a><li>
               </ul>
             </div>
           </div>
