--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %}
+
+
 {% load staticfiles %}
+
 
 {% block title %}PyBursa contacts{% endblock %}
 
 
-{% block nav_contacts %}active{% endblock %}
+{% block navigation_contacts %}active{% endblock %}
 
 
 {% block content %}
