KZ_7.1 fourth try

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 
   <div class="container"></br></br></br></br></br>
 
-{% include "index_include.html" only%}
+{% include "include/index_include.html" only%}
 
 <div class="container">
         <h3>Courses Program</h3>
