modify all templates

--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -4,6 +4,11 @@
 {% block title %}PyBursa - Информация о преподавателе{% endblock title %}
 
 
+{% block link_students %}
+  {% url 'students:list_view' %}
+{% endblock link_students %}  
+
+
 {% block content %}
 
 
