--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <ul class="nav nav-tabs">
       <li role="presentation" class="{% block nav_class_index %}{% endblock nav_class_index %}"><a href="{% url 'index' %}">Main</a></li>
       <li role="presentation" class="{% block nav_class_contacts %}{% endblock nav_class_contacts %}"><a href="{% url 'contact' %}">Contacts</a></li>
-      <li role="presentation" class="{% block nav_class_students %}{% endblock nav_class_students %}"><a href="{% url 'students:list_view' %}">Students</a></li>
+      <li role="presentation" class="{% block nav_class_students %}{% endblock nav_class_students %}"><a href="{% block link_students %}{% endblock link_students %}">Students</a></li>
     </ul>
     
     
