--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,11 @@
 {% block nav_class_index %}active{% endblock nav_class_index %}
 
 
+{% block link_students %}
+  {% url 'students:list_view' %}
+{% endblock link_students %}  
+
+
 {% block content %}
 
 
