--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -7,6 +7,11 @@
 {% block nav_class_students %}active{% endblock nav_class_students %}
 
 
+{% block link_students %}
+  {% url 'students:list_view' %}
+{% endblock link_students %}  
+
+
 {% block content %}
 
 
