--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -10,8 +10,9 @@
 				<h2 class='text-uppercase'>Results</h2>
 				<h3>Квадратное уравнеие: a*x*x + b*x + c = 0</h3>
 				<form >
+
 					{{ form.as_p }}
-					<input type="submit">
+					<input type="submit" value="Решить">
 				</form>
 				<p>{{ result_d }}</p>
 				<p>{{ result }}</p>
