KZ 7_1 Second try

--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -8,9 +8,9 @@
 
 
 {% block content %}
-    <div class="col-md-10 col-md-push-1">
-      <div class="container">
-      <div class="col-md-12">
+<div class="col-md-10 col-md-push-1">
+  <div class="container">
+    <div class="col-md-12">
 {% include "courses/include/inc_courses_info.html" %}
     <div class="container">
       <div class="col-md-12">
@@ -44,4 +44,6 @@
         </table>
       </div>
     </div>
+  </div>
+</div>
  {% endblock content %} 
