--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -11,7 +11,7 @@
 
 
 {% block content %}
-        <div class="column">
+    <div class="column">
       <div class="col-md-10 col-md-push-1">
         <h2 class="sub-header">{{student.name}} {{student.surname}}</h2>
         <div class="table-responsive">
@@ -57,4 +57,6 @@
                 </tr>
           </table>
         </div>
+      </div>
+    </div>
 {% endblock content %}
