--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 		<link href="{% static 'css/style.css' %}" rel="stylesheet">
 
-    <title>{% block title_name %}{% endblock title_name %}</title>
+    <title>{% block title %}{% endblock title %}</title>
 
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <script src="{% static 'js/ie-emulation-modes-warning.js' %}"></script>
