add new includes to app templates

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -18,13 +18,13 @@
 {% load static from staticfiles %}
     
 
-{% include "include/inc_contacts.html" with class="dir" position="director" name="Татьяна Орехова" skype="Tatyana_Oriekhova" email="to096540848@gmail.com" phone="+38 099 186 64 75" %}
+{% include "include/contacts_include.html" with class="dir" position="director" name="Татьяна Орехова" skype="Tatyana_Oriekhova" email="to096540848@gmail.com" phone="+38 099 186 64 75" %}
 
 
-{% include "include/inc_contacts.html" with class="manag" position="manager" name="Дария Михалевич" skype="darka.darka.darka.darka." email="daria.mykhalevych@gmail.com" phone="+38 096 469 15 57" %}
+{% include "include/contacts_include.html" with class="manag" position="manager" name="Дария Михалевич" skype="darka.darka.darka.darka." email="daria.mykhalevych@gmail.com" phone="+38 096 469 15 57" %}
 
 
-{% include "include/inc_contacts.html" with class="found" position="founder" name="Павел Обод" skype="azaless" email="itbursa100@gmail.com" phone="+38 099 173 67 43" %}
+{% include "include/contacts_include.html" with class="found" position="founder" name="Павел Обод" skype="azaless" email="itbursa100@gmail.com" phone="+38 099 173 67 43" %}
 
 
     
