--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -21,10 +21,10 @@
    <h3>Преподаватели</h3>
     <br>
     
-    {% include "include/inc_instructor.html" with block_title="Учитель" instructor=coach %}
+    {% include "include/instructor_include.html" with block_title="Учитель" instructor=coach %}
 
 
-    {% include "include/inc_instructor.html" with block_title="Ассистент" instructor=assistant %}
+    {% include "include/instructor_include.html" with block_title="Ассистент" instructor=assistant %}
 
     <h3>План курса </h3>
     <table class="table table-bordered">
