--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 {% load static from staticfiles %}
 
   
-{% include "include/inc_jumbo.html" %}
+{% include "include/jumbo_include.html" %}
 
    
     
