--- a/coaches/templates/coaches/detail.html
+++ b/coaches/templates/coaches/detail.html
@@ -1,36 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Main</title>
-    {% load staticfiles %}
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}" />
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-  </head>
-  <body class="sl-background">
-    <!-- menu start -->  
-    <nav class="navbar-fixed-top navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="{% url 'index' %}">
-            <img class="sl-brand" alt="GodsBursa" src="{% static 'images/gb-logo.jpg' %}">
-          </a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li><a href="{% url 'index' %}">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'students:list_view' %}?course_id={{ course_detail.id }}">Students</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- menu end -->  
-    <div class="slash-div">
-  
+{% extends "base.html" %}
+
+
+{% block title %}Coaches{% endblock title %}
+
+
+{% block content %}
        <div class="panel panel-primary">
             <div class="panel-heading">
                 <h3 class="panel-title">{{ coach_detail.user.first_name}} {{coach_detail.user.last_name }}</h3>
@@ -41,7 +15,7 @@
                         <tbody>
                             <tr>
                                <td><strong>Birthday</strong></td>
-                               <td>{{ coach_detail.date_of_birth }}</td>                
+                               <td>{{ coach_detail.date_of_birth|date:"d F, Y" }}</td>                
                             </tr>
                             <tr>
                                <td><strong>Address</strong></td>
@@ -80,12 +54,4 @@
                 </div>    
               </div>
           </div>
-
-    </div>  
-    <div class="navbar-fixed-bottom row-fluid">
-      <div class="panel-footer sl-footer">&copy; Stalker inc., 2015+</div>
-    </div>
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
-</html>
+{% endblock content %}
