--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -1,37 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Main</title>
-    {% load staticfiles %}
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}" />
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-  </head>
-  <body class="sl-background">
-    <!-- menu start -->  
-    <nav class="navbar-fixed-top navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="{% url 'index' %}">
-            <img class="sl-brand" alt="GodsBursa" src="{% static 'images/gb-logo.jpg' %}">
-          </a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li><a href="{% url 'index' %}">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'students:list_view' %}?course_id={{ course_detail.id }}">Students</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- menu end -->  
-    <div class="slash-div">
+{% extends "base.html" %}
+
+
+{% block nav_course_students %}?course_id={{ course_detail.id }}{% endblock %}
+
+
+{% block title %}Courses{% endblock title %}
+
+
+{% block content %}
     <h2> {{ course_detail.name }} </h2>
-    {{ course_detail.description }}
+    {{ course_detail.description|truncatechars:32 }}
     <br>
     <h3> Course trainers:</h3>
     <br>
@@ -56,7 +34,6 @@
     <br>
     <h3> Course detailed plan (lessons): </h3>
     <br>
-
       <div class="table-responsive">
         <table class="table table-hover">
             <thead>
@@ -79,12 +56,4 @@
             </tbody>
            </table>
       </div>        
-
-    </div>  
-    <div class="navbar-fixed-bottom row-fluid">
-      <div class="panel-footer sl-footer">&copy; Stalker inc., 2015+</div>
-    </div>
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
-</html>
+{% endblock content %}
