--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -1,12 +1,12 @@
 <h1> Quadratic </h1>
 <div> Calculating ax<sup>2</sup> + bx + c = 0</div>
 <br>
-a = {{ a }} <br>
-{{ a_error }} <br>
-b = {{ b }} <br>
-{{ b_error }} <br>
-c = {{ c }} <br>
-{{ c_error }} <br>
+<form action="/quadratic/result" method="get">
+    {% csrf_token %}
+    {{ formq.as_p }}
+    <input type="submit" value="Решить" />
+</form>
+
 <br>
 {% if calculate %}
     {% if D > 0 %}
