--- a/templates/index.html
+++ b/templates/index.html
@@ -1,35 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Main</title>
-    {% load staticfiles %}
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}" />
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-  </head>
-  <body class="sl-background">
-    <!-- menu start -->  
-    <nav class="navbar-fixed-top navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="{% url 'index' %}">
-            <img class="sl-brand" alt="GodsBursa" src="{% static 'images/gb-logo.jpg' %}">
-          </a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'index' %}">Main<span class="sr-only">(current)</span></a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'students:list_view' %}">Students</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- menu end -->  
-    <div class="slash-div">
+{% extends "base.html" %}
+
+
+{% block title %}Main{% endblock title %}
+
+
+{% block nav_index %}class="active"{% endblock %}
+
+
+{% block content %}
     <h2>God's Bursa<br><small>just the best courses in entire Universe</small></h2>
       <div style="container">
         Welcome to God's Bursa, lucky man! In our cource we will teach you code like a God (or try to do it). Good luck !<br>
@@ -49,23 +27,12 @@
              {% if gc %} 
               {% for course in gc %}
               <tr>
-                <td><a href="{% url 'courses:detail' course.id %}"> {{ course.name }} </a></td>
-                <td>{{ course.short_description }}</td>
+                <td><a href="{% url 'courses:detail' course.id %}"> {{ course.name|upper }} </a></td>
+                <td>{{ course.short_description|title }}</td>
               </tr>
               {% endfor %}
               {% endif %}  
             </tbody>
            </table>
         </div>
-
-        </div>    
-    </div>
-    </div>
-    </div>
-    <div class="navbar-fixed-bottom row-fluid">
-      <div class="panel-footer sl-footer">&copy; Stalker inc., 2015+</div>
-    </div>
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
-</html>
+{% endblock content %}
