--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -19,7 +19,7 @@
 						<thead>
 							<tr>
 				      <th>дата рождения</th>
-				      <td>{{ teacher.date_of_birth|date:'F j, Y' }}</td>
+				      <td>{{ teacher.date_of_birth|date:'d F, Y' }}</td>
 						</tr>
 						<tr>
 							<th>адрес</th>
