--- a/templates/include/coaches/coach_include.html
+++ b/templates/include/coaches/coach_include.html
@@ -1,5 +1,5 @@
 <div class='jumbotron'>
-	<h2>Наши преподователи:</h2>
+	<h2>{{ block_title }}:</h2>
 	{% for coach in coaches %}
 		<p>{{ coach.full_name }}</p>
 	{% endfor %}
